# bangumi-takeout-py

./: .gitignore  README.md  auth.py  bangumi_takeout_colab.ipynb  bangumi_takeout_more_colab.ipynb  dump_personal.py  fetch.py  generate.py  generate_csv.py  generate_html.py  mapping.py  pyproject.toml  takeout.html  takeout.json  utils.py
.github/workflow/: backup.yaml
.github/workflows/: backup.yml
docs/: index.html  takeout.html
